5-Prefix-Routing/2-istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld
  namespace: default
spec:
  gateways:
  - ingress-gateway-configuration
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: helloworld.default.svc.cluster.local
        subset: v1
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: helloworld.default.svc.cluster.local
        subset: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld
  namespace: default
spec:
  host: helloworld.default.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway-configuration
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
